--- a/Cinedefe.Droid/Resources/layout/CiudadListView.axml
+++ b/Cinedefe.Droid/Resources/layout/CiudadListView.axml
@@ -10,7 +10,7 @@
 		android:minWidth="25px"
 		android:minHeight="25px"
 		android:id="@+id/titleTextView"
-		android:textSize="30dp"
+		android:textSize="24dp"
 		android:textAlignment="center"
 		android:textStyle="bold"
 		android:textColor="@android:color/white"
@@ -30,9 +30,9 @@
 		android:minWidth="25px"
 		android:minHeight="25px"
 		android:id="@+id/selectCiudadTitleTextView"
-		android:textSize="22dp"
+		android:textSize="18dp"
 		android:textAlignment="center"
-		android:textStyle="normal"
+		android:textStyle="bold"
 		android:textColor="@android:color/white"
 		android:background="@android:color/holo_blue_light"/>
 	<ListView
