--- a/Cinedefe.Droid/Resources/layout/FechasListView.axml
+++ b/Cinedefe.Droid/Resources/layout/FechasListView.axml
@@ -10,7 +10,7 @@
 		android:minWidth="25px"
 		android:minHeight="25px"
 		android:id="@+id/titleTextView"
-		android:textSize="30dp"
+		android:textSize="24dp"
 		android:textAlignment="center"
 		android:textStyle="bold"
 		android:textColor="@android:color/white"
@@ -36,6 +36,13 @@
 		android:textColor="@android:color/white"
 		android:background="@android:color/holo_blue_light"/>
 	<TextView
+		android:text=""
+		android:layout_width="fill_parent"
+		android:layout_height="wrap_content"
+		android:layout_below="@id/titleTextView"
+		android:id="@+id/spacer2TextView"
+	    android:height="2dp"/>
+	<TextView
 		android:text="[SucursalNombre]"
 		android:layout_width="fill_parent"
 		android:layout_height="wrap_content"
@@ -49,26 +56,40 @@
 		android:textColor="@android:color/white"
 		android:background="@android:color/holo_blue_light"/>
 	<TextView
-		android:text="[Pelicula] - [Sala]"
+		android:text=""
 		android:layout_width="fill_parent"
 		android:layout_height="wrap_content"
 		android:layout_below="@id/sucursalTitleTextView"
+		android:id="@+id/spacer3TextView"
+	    android:height="2dp"/>
+	<TextView
+		android:text="[FuncionPeliculaSala]"
+		android:layout_width="fill_parent"
+		android:layout_height="wrap_content"
+		android:layout_below="@id/spacer3TextView"
 		android:minWidth="25px"
 		android:minHeight="25px"
-		android:id="@+id/peliculaTitleTextView"
-		android:textSize="16dp"
+		android:id="@+id/funcionTitleTextView"
+		android:textSize="14dp"
 		android:textAlignment="center"
 		android:textStyle="normal"
 		android:textColor="@android:color/white"
 		android:background="@android:color/holo_blue_light"/>
 	<TextView
-		android:text="Horarios Disponibles"
+		android:text=""
 		android:layout_width="fill_parent"
 		android:layout_height="wrap_content"
-		android:layout_below="@id/peliculaTitleTextView"
+		android:layout_below="@id/funcionTitleTextView"
+		android:id="@+id/spacer4TextView"
+	    android:height="2dp"/>
+	<TextView
+		android:text="Seleccione la fecha"
+		android:layout_width="fill_parent"
+		android:layout_height="wrap_content"
+		android:layout_below="@id/spacer4TextView"
 		android:minWidth="25px"
 		android:minHeight="25px"
-		android:id="@+id/horariosTitleTextView"
+		android:id="@+id/selectFechaTitleTextView"
 		android:textSize="16dp"
 		android:textAlignment="center"
 		android:textStyle="bold"
@@ -79,7 +100,7 @@
 		android:minHeight="25px"
 		android:layout_width="match_parent"
 		android:layout_height="match_parent"
-		android:layout_below="@id/horariosTitleTextView"
-		android:id="@+id/horariosListView" />
+		android:layout_below="@id/selectFechaTitleTextView"
+		android:id="@+id/fechasListView" />
 
 </LinearLayout>
