--- a/Cinedefe.Droid/Resources/layout/FuncionesListView.axml
+++ b/Cinedefe.Droid/Resources/layout/FuncionesListView.axml
@@ -10,7 +10,7 @@
 		android:minWidth="25px"
 		android:minHeight="25px"
 		android:id="@+id/titleTextView"
-		android:textSize="30dp"
+		android:textSize="24dp"
 		android:textAlignment="center"
 		android:textStyle="bold"
 		android:textColor="@android:color/white"
@@ -67,6 +67,6 @@
 		android:layout_width="match_parent"
 		android:layout_height="match_parent"
 		android:layout_below="@id/carteleraTitleTextView"
-		android:id="@+id/peliculasListView" />
+		android:id="@+id/funcionesListView" />
 
 </LinearLayout>
