--- a/Cinedefe.Droid/Resources/layout/HorariosListView.axml
+++ b/Cinedefe.Droid/Resources/layout/HorariosListView.axml
@@ -10,7 +10,7 @@
 		android:minWidth="25px"
 		android:minHeight="25px"
 		android:id="@+id/titleTextView"
-		android:textSize="24dp"
+		android:textSize="30dp"
 		android:textAlignment="center"
 		android:textStyle="bold"
 		android:textColor="@android:color/white"
@@ -30,27 +30,59 @@
 		android:minWidth="25px"
 		android:minHeight="25px"
 		android:id="@+id/ciudadTitleTextView"
-		android:textSize="18dp"
+		android:textSize="16dp"
 		android:textAlignment="center"
 		android:textStyle="normal"
 		android:textColor="@android:color/white"
 		android:background="@android:color/holo_blue_light"/>
 	<TextView
-		android:text=""
-		android:layout_width="fill_parent"
-		android:layout_height="wrap_content"
-		android:layout_below="@id/titleTextView"
-		android:id="@+id/spacer2TextView"
-	    android:height="2dp"/>
-	<TextView
-		android:text="Selecciona la Sucursal"
+		android:text="[SucursalNombre]"
 		android:layout_width="fill_parent"
 		android:layout_height="wrap_content"
 		android:layout_below="@id/ciudadTitleTextView"
 		android:minWidth="25px"
 		android:minHeight="25px"
-		android:id="@+id/selectSucursalTitleTextView"
-		android:textSize="18dp"
+		android:id="@+id/sucursalTitleTextView"
+		android:textSize="16dp"
+		android:textAlignment="center"
+		android:textStyle="normal"
+		android:textColor="@android:color/white"
+		android:background="@android:color/holo_blue_light"/>
+	<TextView
+		android:text="[Pelicula] - [Sala]"
+		android:layout_width="fill_parent"
+		android:layout_height="wrap_content"
+		android:layout_below="@id/sucursalTitleTextView"
+		android:minWidth="25px"
+		android:minHeight="25px"
+		android:id="@+id/peliculaTitleTextView"
+		android:textSize="14dp"
+		android:textAlignment="center"
+		android:textStyle="normal"
+		android:textColor="@android:color/white"
+		android:background="@android:color/holo_blue_light"/>
+	<TextView
+		android:text="[Fecha]"
+		android:layout_width="fill_parent"
+		android:layout_height="wrap_content"
+		android:layout_below="@id/peliculaTitleTextView"
+		android:minWidth="25px"
+		android:minHeight="25px"
+		android:id="@+id/fechaTitleTextView"
+		android:textSize="16dp"
+		android:textAlignment="center"
+		android:textStyle="normal"
+		android:textColor="@android:color/white"
+		android:background="@android:color/holo_blue_light"/>
+	<TextView
+		android:text="Horarios Disponibles"
+		android:layout_width="fill_parent"
+		android:layout_height="wrap_content"
+		android:layout_below="@id/fechaTitleTextView"
+		android:minWidth="25px"
+		android:minHeight="25px"
+		android:id="@+id/horariosTitleTextView"
+		android:textSize="16dp"
 		android:textAlignment="center"
 		android:textStyle="bold"
 		android:textColor="@android:color/white"
@@ -60,7 +92,7 @@
 		android:minHeight="25px"
 		android:layout_width="match_parent"
 		android:layout_height="match_parent"
-		android:layout_below="@id/selectSucursalTitleTextView"
-		android:id="@+id/sucursalesListView" />
+		android:layout_below="@id/horariosTitleTextView"
+		android:id="@+id/horariosListView" />
 
 </LinearLayout>
