--- a/Cinedefe.Droid/Resources/layout/AsientosSalaView.axml
+++ b/Cinedefe.Droid/Resources/layout/AsientosSalaView.axml
@@ -1,7 +1,139 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
-
-</LinearLayout>
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/mainScrollView"
+    android:layout_width="fill_parent"
+    android:layout_height="match_parent"
+    android:minWidth="25px"
+    android:minHeight="25px">
+	<LinearLayout
+		android:orientation="vertical"
+		android:layout_width="match_parent"
+		android:layout_height="match_parent">
+		<TextView
+			android:text="Cinedefe Tickets"
+			android:layout_width="fill_parent"
+			android:layout_height="wrap_content"
+			android:minWidth="25px"
+			android:minHeight="25px"
+			android:id="@+id/titleTextView"
+			android:textSize="24dp"
+			android:textAlignment="center"
+			android:textStyle="bold"
+			android:textColor="@android:color/white"
+			android:background="@android:color/holo_blue_light"/>
+		<TextView
+			android:text=""
+			android:layout_width="fill_parent"
+			android:layout_height="wrap_content"
+			android:layout_below="@id/titleTextView"
+			android:id="@+id/spacerTextView"
+			android:height="10dp"/>
+		<TextView
+			android:text="[CiudadNombre]"
+			android:layout_width="fill_parent"
+			android:layout_height="wrap_content"
+			android:layout_below="@id/spacerTextView"
+			android:minWidth="25px"
+			android:minHeight="25px"
+			android:id="@+id/ciudadTitleTextView"
+			android:textSize="16dp"
+			android:textAlignment="center"
+			android:textStyle="normal"
+			android:textColor="@android:color/white"
+			android:background="@android:color/holo_blue_light"/>
+		<TextView
+			android:text="[SucursalNombre]"
+			android:layout_width="fill_parent"
+			android:layout_height="wrap_content"
+			android:layout_below="@id/ciudadTitleTextView"
+			android:minWidth="25px"
+			android:minHeight="25px"
+			android:id="@+id/sucursalTitleTextView"
+			android:textSize="16dp"
+			android:textAlignment="center"
+			android:textStyle="normal"
+			android:textColor="@android:color/white"
+			android:background="@android:color/holo_blue_light"/>
+		<TextView
+			android:text="[Pelicula] - [Sala]"
+			android:layout_width="fill_parent"
+			android:layout_height="wrap_content"
+			android:layout_below="@id/sucursalTitleTextView"
+			android:minWidth="25px"
+			android:minHeight="25px"
+			android:id="@+id/peliculaTitleTextView"
+			android:textSize="16dp"
+			android:textAlignment="center"
+			android:textStyle="normal"
+			android:textColor="@android:color/white"
+			android:background="@android:color/holo_blue_light"/>
+		<TextView
+			android:text="[Fecha - Horario]"
+			android:layout_width="fill_parent"
+			android:layout_height="wrap_content"
+			android:layout_below="@id/peliculaTitleTextView"
+			android:minWidth="25px"
+			android:minHeight="25px"
+			android:id="@+id/horarioTitleTextView"
+			android:textSize="16dp"
+			android:textAlignment="center"
+			android:textStyle="normal"
+			android:textColor="@android:color/white"
+			android:background="@android:color/holo_blue_light"/>        
+		<TextView
+			android:text="[Boletos]"
+			android:layout_width="fill_parent"
+			android:layout_height="wrap_content"
+			android:layout_below="@id/horarioTitleTextView"
+			android:minWidth="25px"
+			android:minHeight="25px"
+			android:id="@+id/boletosTitleTextView"
+			android:textSize="16dp"
+			android:textAlignment="center"
+			android:textStyle="normal"
+			android:textColor="@android:color/white"
+			android:background="@android:color/holo_blue_light"/>
+		<Space
+			android:layout_width="fill_parent"
+			android:layout_height="10dp"
+			android:id="@+id/space1" />
+		<TextView
+			android:text="05:00"
+			android:layout_width="fill_parent"
+			android:layout_height="wrap_content"
+			android:layout_below="@id/space1"
+			android:minWidth="25px"
+			android:minHeight="25px"
+			android:id="@+id/timerTextView"
+			android:textSize="16dp"
+			android:textAlignment="center"
+			android:textStyle="bold"
+			android:textColor="@android:color/holo_orange_dark"
+			android:background="@android:color/white"
+			android:layout_marginLeft="0dp"
+			android:layout_marginRight="0dp"
+			android:paddingLeft="14dp" />
+			android:paddingRight="10dp" />
+		<Space
+			android:layout_width="fill_parent"
+			android:layout_height="30dp"
+			android:id="@+id/space2" />
+		<RelativeLayout
+			android:orientation="horizontal"
+			android:layout_width="fill_parent"
+			android:layout_height="wrap_content"
+			android:paddingLeft="40dp"
+			android:paddingRight="40dp">
+			<GridView
+				android:id="@+id/asientosGridView"
+				android:layout_width="fill_parent"
+				android:layout_height="300dp"
+				android:columnWidth="30dp"
+				android:numColumns="auto_fit"
+				android:verticalSpacing="10dp"
+				android:horizontalSpacing="10dp"
+				android:stretchMode="columnWidth"
+				android:gravity="center" />
+		</RelativeLayout>
+	</LinearLayout>
+</ScrollView>
