--- a/Cinedefe.Droid/Resources/layout/BoletosView.axml
+++ b/Cinedefe.Droid/Resources/layout/BoletosView.axml
@@ -16,7 +16,7 @@
 			android:minWidth="25px"
 			android:minHeight="25px"
 			android:id="@+id/titleTextView"
-			android:textSize="30dp"
+			android:textSize="24dp"
 			android:textAlignment="center"
 			android:textStyle="bold"
 			android:textColor="@android:color/white"
@@ -68,7 +68,7 @@
 			android:textColor="@android:color/white"
 			android:background="@android:color/holo_blue_light"/>
 		<TextView
-			android:text="[Horario]"
+			android:text="[Fecha - Horario]"
 			android:layout_width="fill_parent"
 			android:layout_height="wrap_content"
 			android:layout_below="@id/peliculaTitleTextView"
@@ -80,36 +80,74 @@
 			android:textStyle="normal"
 			android:textColor="@android:color/white"
 			android:background="@android:color/holo_blue_light"/>        
+		<TextView
+			android:text="Boletos a comprar"
+			android:layout_width="fill_parent"
+			android:layout_height="wrap_content"
+			android:layout_below="@id/horarioTitleTextView"
+			android:minWidth="25px"
+			android:minHeight="25px"
+			android:id="@+id/boletosTitleTextView"
+			android:textSize="18dp"
+			android:textAlignment="center"
+			android:textStyle="bold"
+			android:textColor="@android:color/white"
+			android:background="@android:color/holo_blue_light"/>
+		<Space
+			android:layout_width="fill_parent"
+			android:layout_height="30dp"
+			android:id="@+id/space1" />
 		<RelativeLayout
 			android:orientation="horizontal"
 			android:layout_width="fill_parent"
-			android:layout_height="wrap_content">
+			android:layout_height="wrap_content"
+			android:paddingLeft="40dp"
+			android:paddingRight="40dp">
 			<Button
-				android:text="Cancelar"
-				android:layout_width="wrap_content"
+				android:text="-"
+				android:layout_width="40dp"
 				android:layout_height="wrap_content"
-				android:id="@+id/cancelButton"
+				android:id="@+id/substractButton"
 				android:layout_alignParentLeft="true"
 				android:layout_centerInParent="true"
 				android:layout_marginTop="20dp" />
 			<EditText
 				android:inputType="number"
-				android:text="1"
-				android:layout_width="30dp"
+				android:text="0"
+				android:layout_width="50dp"
 				android:layout_height="40dp"
-				android:id="@+id/amountEditText"
+				android:id="@+id/cantidadEditText"
 				android:background="@android:color/white"
 				android:textColor="@android:color/black"
 				android:layout_centerHorizontal="true"
-				android:layout_centerVertical="true" />
+				android:layout_centerVertical="true"
+				android:textAlignment="center" />
 			<Button
-				android:text="Comprar"
-				android:layout_width="wrap_content"
+				android:text="+"
+				android:layout_width="40dp"
 				android:layout_height="wrap_content"
-				android:id="@+id/orderButton"
+				android:id="@+id/addButton"
 				android:layout_alignParentRight="true"
 				android:layout_centerInParent="true"
 				android:layout_marginTop="20dp" />
 		</RelativeLayout>
-    </LinearLayout>
+		<Space
+			android:layout_width="fill_parent"
+			android:layout_height="30dp"
+			android:id="@+id/space1" />
+		<RelativeLayout
+			android:orientation="horizontal"
+			android:layout_width="fill_parent"
+			android:layout_height="wrap_content"
+			android:paddingLeft="40dp"
+			android:paddingRight="40dp">
+			<Button
+				android:text="Continuar"
+				android:layout_width="wrap_content"
+				android:layout_height="wrap_content"
+				android:id="@+id/continuarButton"
+				android:layout_centerInParent="true"
+				android:layout_marginTop="20dp" />
+		</RelativeLayout>
+	</LinearLayout>
 </ScrollView>
