--- a/Cinedefe.Droid/Resources/layout/PagoCapturaView.axml
+++ b/Cinedefe.Droid/Resources/layout/PagoCapturaView.axml
@@ -1,7 +1,217 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
-
-</LinearLayout>
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/mainScrollView"
+    android:layout_width="fill_parent"
+    android:layout_height="match_parent"
+    android:minWidth="25px"
+    android:minHeight="25px">
+	<LinearLayout
+		android:orientation="vertical"
+		android:layout_width="match_parent"
+		android:layout_height="match_parent">
+		<TextView
+			android:text="Cinedefe Tickets"
+			android:layout_width="fill_parent"
+			android:layout_height="wrap_content"
+			android:minWidth="25px"
+			android:minHeight="25px"
+			android:id="@+id/titleTextView"
+			android:textSize="24dp"
+			android:textAlignment="center"
+			android:textStyle="bold"
+			android:textColor="@android:color/holo_blue_light"
+			android:background="@android:color/white"/>
+		<TextView
+			android:text=""
+			android:layout_width="fill_parent"
+			android:layout_height="wrap_content"
+			android:layout_below="@id/titleTextView"
+			android:id="@+id/spacerTextView"
+			android:height="5dp"/>
+		<TextView
+			android:text="[CiudadNombre]"
+			android:layout_width="fill_parent"
+			android:layout_height="wrap_content"
+			android:layout_below="@id/spacerTextView"
+			android:minWidth="25px"
+			android:minHeight="25px"
+			android:id="@+id/ciudadTitleTextView"
+			android:textSize="16dp"
+			android:textAlignment="center"
+			android:textStyle="normal"
+			android:textColor="@android:color/white"
+			android:background="@android:color/holo_blue_light"/>
+		<TextView
+			android:text="[SucursalNombre]"
+			android:layout_width="fill_parent"
+			android:layout_height="wrap_content"
+			android:layout_below="@id/ciudadTitleTextView"
+			android:minWidth="25px"
+			android:minHeight="25px"
+			android:id="@+id/sucursalTitleTextView"
+			android:textSize="16dp"
+			android:textAlignment="center"
+			android:textStyle="normal"
+			android:textColor="@android:color/white"
+			android:background="@android:color/holo_blue_light"/>
+		<TextView
+			android:text="[Pelicula] - [Sala]"
+			android:layout_width="fill_parent"
+			android:layout_height="wrap_content"
+			android:layout_below="@id/sucursalTitleTextView"
+			android:minWidth="25px"
+			android:minHeight="25px"
+			android:id="@+id/peliculaTitleTextView"
+			android:textSize="16dp"
+			android:textAlignment="center"
+			android:textStyle="normal"
+			android:textColor="@android:color/white"
+			android:background="@android:color/holo_blue_light"/>
+		<TextView
+			android:text="[Fecha - Horario]"
+			android:layout_width="fill_parent"
+			android:layout_height="wrap_content"
+			android:layout_below="@id/peliculaTitleTextView"
+			android:minWidth="25px"
+			android:minHeight="25px"
+			android:id="@+id/horarioTitleTextView"
+			android:textSize="16dp"
+			android:textAlignment="center"
+			android:textStyle="normal"
+			android:textColor="@android:color/white"
+			android:background="@android:color/holo_blue_light"/>
+		<TextView
+			android:text="[CantidadBoletos] [TotalAPagar]"
+			android:layout_width="fill_parent"
+			android:layout_height="wrap_content"
+			android:layout_below="@id/horarioTitleTextView"
+			android:minWidth="25px"
+			android:minHeight="25px"
+			android:id="@+id/boletosTitleTextView"
+			android:textSize="18dp"
+			android:textAlignment="center"
+			android:textStyle="bold"
+			android:textColor="@android:color/white"
+			android:background="@android:color/holo_blue_light"/>
+		<Space
+			android:layout_width="fill_parent"
+			android:layout_height="2dp"
+			android:id="@+id/space1" />
+		<RelativeLayout
+			android:orientation="horizontal"
+			android:layout_width="fill_parent"
+			android:layout_height="wrap_content"
+			android:paddingLeft="20dp"
+			android:paddingRight="20dp">
+			<TextView
+				android:text="05:00"
+				android:layout_width="80dp"
+				android:layout_height="wrap_content"
+				android:id="@+id/timerTextView"
+				android:textSize="18dp"
+				android:textAlignment="center"
+				android:textStyle="bold"
+				android:textColor="@android:color/holo_orange_dark"
+				android:background="@android:color/white"
+				android:layout_marginLeft="0.0dp"
+				android:layout_marginRight="0.0dp"
+				android:layout_alignParentLeft="true"
+				android:layout_marginTop="15dp"
+				android:paddingLeft="0dp"
+				android:paddingRight="0dp" />
+			<Button
+				android:text="Continuar"
+				android:layout_width="wrap_content"
+				android:layout_height="wrap_content"
+				android:id="@+id/continuarButton"
+				android:layout_alignParentRight="true"
+				android:layout_centerInParent="true"
+				android:layout_marginTop="10dp" />
+		</RelativeLayout>
+		<RelativeLayout
+			android:orientation="horizontal"
+			android:layout_width="fill_parent"
+			android:layout_height="wrap_content"
+			android:paddingLeft="0dp"
+			android:paddingRight="0dp">
+			<TextView
+				android:text="Forma de Pago"
+				android:layout_width="fill_parent"
+				android:layout_height="wrap_content"
+				android:layout_below="@id/horarioTitleTextView"
+				android:minWidth="25px"
+				android:minHeight="25px"
+				android:id="@+id/boletosTitleTextView"
+				android:textSize="18dp"
+				android:textAlignment="center"
+				android:textStyle="bold"
+				android:textColor="@android:color/white"
+				android:background="@android:color/holo_blue_light"/>
+		</RelativeLayout>
+		<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"  
+			android:orientation="vertical"  
+			android:layout_width="match_parent"  
+			android:layout_height="match_parent">  
+			<EditText  
+				android:layout_marginLeft="10dp"  
+				android:inputType="textPersonName"  
+				android:layout_width="match_parent"  
+				android:layout_height="wrap_content"  
+				android:id="@+id/txtUserName"  
+				android:hint="Escriba su nombre"  
+				android:layout_marginRight="0.0dp"
+				android:textSize="14dp" />
+			<EditText
+				android:layout_marginLeft="10dp"
+				android:inputType="textEmailAddress"
+				android:layout_width="match_parent"
+				android:layout_height="wrap_content"
+				android:id="@+id/txtUserEmail"
+				android:layout_marginRight="0.0dp"
+				android:hint="Escriba su correo electrónico"
+				android:textSize="14dp" />  
+			<EditText
+				android:layout_marginLeft="10dp"
+				android:inputType="number"
+				android:layout_width="match_parent"
+				android:layout_height="wrap_content"
+				android:id="@+id/txtCardNumber"
+				android:layout_marginRight="0.0dp"
+				android:hint="Número de su Tarjeta"
+				android:textSize="14dp" />  
+			<EditText
+				android:layout_marginLeft="10dp"
+				android:inputType="number"
+				android:layout_width="match_parent"
+				android:layout_height="wrap_content"
+				android:id="@+id/txtCardExpires"
+				android:layout_marginRight="0.0dp"
+				android:hint="Vencimiento"
+				android:textSize="14dp" />  
+			<EditText
+				android:layout_marginLeft="10dp"
+				android:inputType="number"
+				android:layout_width="match_parent"
+				android:layout_height="wrap_content"
+				android:id="@+id/txtCardCVV"
+				android:layout_marginRight="0.0dp"
+				android:hint="CVV"
+				android:textSize="14dp" />  
+			<EditText
+				android:layout_marginLeft="10dp"
+				android:inputType="number"
+				android:layout_width="match_parent"
+				android:layout_height="wrap_content"
+				android:id="@+id/txtCardCodigoPostal"
+				android:layout_marginRight="0.0dp"
+				android:hint="Código Postal"
+				android:textSize="14dp" />  
+			<TextView  
+				android:layout_marginLeft="10dp"  
+				android:text=""  
+				android:layout_width="match_parent"  
+				android:layout_height="wrap_content"  
+				android:id="@+id/txtResult" />  
+		</LinearLayout>
+	</LinearLayout>
+</ScrollView>
